--- a/templates/mainPage.html
+++ b/templates/mainPage.html
@@ -13,7 +13,7 @@
 	<p>----------------------------------------------------------------------</p>
 	<i>* <a href = "/page_2" target="_blank">/page_2 </a><h5>## Проверка знаний криптографии.</h5></i>
 	<p>----------------------------------------------------------------------</p>
-	<i>* <a href = "/page_3" target="_blank">/page_3 </a><h5>## Сдесь есть XSS!</h5></i>
+	<i>* <a href = "/page_3" target="_blank">/page_3 </a><h5>## Здесь есть XSS!</h5></i>
 	<p>----------------------------------------------------------------------</p>
 </body>
 </html>
