--- a/templates/page_2.html
+++ b/templates/page_2.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<h3>Флаг зашифрован 3 раза.</h3>
-	<h3>Используеиые алгоритмы: <i>Base64, ROT25, ROT13. </i></h3>
-	<h5><i>Зашифрованый флаг: EJg0Maggn2ydLJc0rU0X</i></h5>
+	<h3>Используеиые алгоритмы: <i>Base64, ROT47, ROT13. </i></h3>
+	<h5><i>Зашифрованый флаг: &b=@5wE96)5c3b9@3w_l</i></h5>
 </body>
 </html>
