--- a/bin/templates/page_1.html
+++ b/bin/templates/page_1.html
@@ -5,7 +5,7 @@
 	<title>CTF_2020</title>
 </head>
 <body>
-	<h3>Найди флаг, если сможешь!</h3>
+	<h3>Find the Flag if can you do!</h3>
 	<input type="password" value="Flug{asdasdas}"/>
 	<!-- Flug{aasda} -->
 </body>
