--- a/bin/templates/mainPage.html
+++ b/bin/templates/mainPage.html
@@ -5,15 +5,15 @@
 	<title>CTF_2020</title>
 </head>
 <body>
-	<h1>Карта заданий:</h1>
+	<h1>Tasks map:</h1>
 	<p></p>
-	<p>Задания отсортированы от самого лёгкого, к самому сложному.</p>
+	<p>Tasks sorted on very easy to hardest.</p>
 	<p>----------------------------------------------------------------------</p>
-	<i>* <a href = "/page_1" target="_blank">/page_1 </a><h5>## Флаг находится где-то на странице.</h5></i>
+	<i>* <a href = "/page_1" target="_blank">/page_1 </a><h5>## Get Flag in the page.</h5></i>
 	<p>----------------------------------------------------------------------</p>
-	<i>* <a href = "/page_2" target="_blank">/page_2 </a><h5>## Проверка знаний криптографии.</h5></i>
+	<i>* <a href = "/page_2" target="_blank">/page_2 </a><h5>## Check Cryptography knowlage.</h5></i>
 	<p>----------------------------------------------------------------------</p>
-	<i>* <a href = "/page_3" target="_blank">/page_3 </a><h5>## Здесь есть XSS!</h5></i>
+	<i>* <a href = "/page_3" target="_blank">/page_3 </a><h5>## Here XSS Inject!</h5></i>
 	<p>----------------------------------------------------------------------</p>
 </body>
 </html>
