--- a/bin/templates/page_3.html
+++ b/bin/templates/page_3.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<form role="form" method="POST">
-		<p>Что можно сделать с этой формой ввода? </p>
+		<p>What we can do with input forms? </p>
 		<input id="vvod" name="vvod" type="text" />
   </form>
 </body>
