--- a/templates/page_2.html
+++ b/templates/page_2.html
@@ -5,8 +5,8 @@
 	<title>CTF_2020</title>
 </head>
 <body>
-	<h3>Флаг зашифрован 3 раза.</h3>
-	<h3>Используеиые алгоритмы: <i>Base64, ROT47, ROT13. </i></h3>
-	<h5><i>Зашифрованый флаг: &b=@5wE96)5c3b9@3w_l</i></h5>
+	<h3>Flag incrypted 3 times.</h3>
+	<h3>Using Algoritms: <i>Base64, ROT47, ROT13. </i></h3>
+	<h5><i>Encrypted Flag: &b=@5wE96)5c3b9@3w_l</i></h5>
 </body>
 </html>
