--- a/templates/page_3_flug_document.html
+++ b/templates/page_3_flug_document.html
@@ -5,7 +5,7 @@
 	<title>CTF_2020</title>
 </head>
 <body>
-	<p>Поздравляю, вот ваш флаг: </p>
+	<p>Congratulations, your flag: </p>
 	<script>document.write("Flug{hjghsfsd}")</script>
 </body>
 </html>
