--- a/templates/page_3.html
+++ b/templates/page_3.html
@@ -7,7 +7,7 @@
 <body>
 	<form role="form" method="POST">
 		<p>What we can do with input forms? </p>
-		<input id="vvod" name="vvod" type="text" />
+		<input id="inputs" name="inputs" type="text" />
   </form>
 </body>
 </html>
